<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DineOut</string>
    <string name="view_map">Προβολή Χάρτη</string>
    <string name="search_restaurants">Αναζήτηση εστιατορίων…</string>
    <string name="rating">Βαθμολογία</string>
    <string name="greek_cuisine">Ελληνική Κουζίνα</string>
    <string name="mediterranean_cuisine">Μεσογειακή Κουζίνα</string>
    <string name="greek_fast_food">Ελληνικό Φαστ Φουντ</string>
    <string name="outdoor_seating">Εξωτερικός Χώρος</string>
    <string name="live_music">Ζωντανή Μουσική</string>
    <string name="vegetarian_options">Επιλογές για Χορτοφάγους</string>
    <string name="family_friendly">Οικογενειακό</string>
    <string name="modern">Μοντέρνο</string>
    <string name="seafood">Θαλασσινά</string>
    <string name="traditional">Παραδοσιακό</string>
    <string name="souvlaki">Σουβλάκι</string>
    <string name="meze">Μεζέ</string>
    <string name="restaurant_map">Χάρτης Εστιατορίων</string>
    <string name="back">Πίσω</string>
    <string name="filters">Φίλτρα</string>
    <string name="my_location">Η Τοποθεσία μου</string>
    <string name="all">Όλα</string>
    <string name="select_cuisine">Επιλέξτε Κουζίνα</string>
    <string name="search_hint">Αναζήτηση εστιατορίων…</string>
    <string name="view_on_map">Προβολή στον Χάρτη</string>
    <string name="favorite_restaurant">Αγαπημένο Εστιατόριο</string>
    <string name="opening_hours">Ώρες Λειτουργίας</string>
    <string name="about">Σχετικά</string>
    <string name="features">Χαρακτηριστικά</string>
    <string name="contact">Επικοινωνία</string>
    <string name="favorite">Αγαπημένο</string>
    <string name="view_menu">Προβολή Μενού</string>
    <string name="add_to_favorites">Προσθήκη στα Αγαπημένα</string>
    <string name="remove_from_favorites">Αφαίρεση από τα Αγαπημένα</string>
    <string name="view_cart">Προβολή Καλαθιού</string>
    <string name="menu_preview">Προεπισκόπηση Μενού</string>
    <string name="view_full_menu">Προβολή Πλήρους Μενού</string>
    <string name="vegetarian">Χορτοφάγος</string>
    <string name="price">Τιμή</string>
    <string name="checkout">Ολοκλήρωση Παραγγελίας</string>
    <string name="cart">Καλάθι</string>
    <string name="your_cart">Το Καλάθι σας</string>
    <string name="call">Κλήση</string>
    <string name="cuisine">Κουζίνα</string>
    <string name="location">Τοποθεσία</string>
    <string name="price_range">Εύρος Τιμών</string>
    <string name="order_history">Ιστορικό Παραγγελιών</string>
    <string name="empty_cart">Το καλάθι σας είναι άδειο</string>
    <string name="continue_shopping">Συνέχεια Αγορών</string>
    <string name="delivery_information">Πληροφορίες Παράδοσης</string>
    <string name="delivery_address">Διεύθυνση Παράδοσης</string>
    <string name="payment_method">Τρόπος Πληρωμής</string>
    <string name="order_summary">Σύνοψη Παραγγελίας</string>
    <string name="subtotal">Υποσύνολο</string>
    <string name="delivery_fee">Κόστος Παράδοσης</string>
    <string name="total">Σύνολο</string>
    <string name="place_order">Υποβολή Παραγγελίας</string>
    <string name="order_confirmation">Ολοκλήρωση Παραγγελίας</string>
    <string name="thank_you_for_your_order">Ευχαριστούμε για την Παραγγελία σας!</string>
    <string name="order_id_format">Κωδικός Παραγγελίας: %1$s</string>
    <string name="order_date">Ημερομηνία: %1$s</string>
    <string name="order_qr_code">QR Κώδικας Παραγγελίας</string>
    <string name="scan_to_track">Σαρώστε για να παρακολουθήσετε την παραγγελία σας</string>
    <string name="decrease_quantity">Μείωση Ποσότητας</string>
    <string name="increase_quantity">Αύξηση Ποσότητας</string>
    <string name="remove_item">Αφαίρεση</string>
    <string name="return_to_main_menu">Επιστροφή στο Κεντρικό Μενού</string>
    <string name="add_to_cart">Προσθήκη στο Καλάθι</string>
    <string name="title_activity_maps">Χάρτης</string>
    <string name="error_location_permission">Απαιτείται άδεια πρόσβασης στην τοποθεσία</string>
    <string name="error_location_services">Τα υπηρεσίες τοποθεσίας είναι απενεργοποιημένες</string>
    <string name="error_network">Σφάλμα σύνδεσης. Ελέγξτε τη σύνδεσή σας στο διαδίκτυο</string>
    <string name="error_loading_map">Σφάλμα φόρτωσης χάρτη</string>
    <string name="error_loading_restaurants">Σφάλμα φόρτωσης εστιατορίων</string>
    <string name="error_loading_menu">Σφάλμα φόρτωσης μενού</string>
    <string name="error_processing_order">Σφάλμα επεξεργασίας παραγγελίας</string>
    <string name="error_payment">Σφάλμα πληρωμής</string>
    <string name="error_delivery">Σφάλμα παράδοσης</string>
    <string name="error_unknown">Άγνωστο σφάλμα</string>
    <string name="success_order">Η παραγγελία σας ολοκληρώθηκε επιτυχώς!</string>
    <string name="success_payment">Η πληρωμή σας ολοκληρώθηκε επιτυχώς!</string>
    <string name="success_delivery">Η παράδοση σας ολοκληρώθηκε επιτυχώς!</string>
    <string name="loading">Φόρτωση…</string>
    <string name="processing">Επεξεργασία…</string>
    <string name="saving">Αποθήκευση…</string>
    <string name="updating">Ενημέρωση…</string>
    <string name="deleting">Διαγραφή…</string>
    <string name="cancelling">Ακύρωση…</string>
    <string name="confirm">Επιβεβαίωση</string>
    <string name="cancel">Ακύρωση</string>
    <string name="save">Αποθήκευση</string>
    <string name="delete">Διαγραφή</string>
    <string name="edit">Επεξεργασία</string>
    <string name="update">Ενημέρωση</string>
    <string name="close">Κλείσιμο</string>
    <string name="done">Τέλος</string>
    <string name="next">Επόμενο</string>
    <string name="previous">Προηγούμενο</string>
    <string name="skip">Παράλειψη</string>
    <string name="finish">Ολοκλήρωση</string>
    <string name="retry">Επανάληψη</string>
    <string name="refresh">Ανανέωση</string>
    <string name="search">Αναζήτηση</string>
    <string name="filter">Φιλτράρισμα</string>
    <string name="sort">Ταξινόμηση</string>
    <string name="clear">Καθαρισμός</string>
    <string name="apply">Εφαρμογή</string>
    <string name="reset">Επαναφορά</string>
    <string name="accept">Αποδοχή</string>
    <string name="decline">Απόρριψη</string>
    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>
    <string name="ok">Εντάξει</string>
</resources>